--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,12 @@
 {
     "files.associations": {
-        "algorithm": "cpp",
-        "__bit_reference": "cpp",
-        "__hash_table": "cpp",
-        "__split_buffer": "cpp",
         "array": "cpp",
-        "bitset": "cpp",
-        "initializer_list": "cpp",
-        "iterator": "cpp",
+        "deque": "cpp",
         "string": "cpp",
-        "string_view": "cpp",
         "unordered_map": "cpp",
         "vector": "cpp",
-        "functional": "cpp",
-        "memory": "cpp",
-        "span": "cpp"
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "ostream": "cpp"
     }
 }
