--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "__functional_base": "cpp"
+        "__functional_base": "cpp",
+        "map": "cpp"
     }
 }
